# consensp1us

./: .gitignore  Cargo.toml  README.md  rust-toolchain
.github/workflows/: prove.yml
lib/: Cargo.toml
lib/src/: file.rs  input.rs  lib.rs  operation.rs
program/: Cargo.toml
program/operations/: Cargo.toml
program/operations/src/: main.rs
program/slashings_reset/: Cargo.toml
program/slashings_reset/src/: main.rs
program/src/: main.rs
script/: Cargo.toml  Makefile  build.rs
script/subscripts/: download_ef_data.sh  parse_log_to_table.sh  sort_table.sh
