[workspace]
members = ["lib", "program/operations", "program/slashings_reset", "script"]
resolver = "2"

[workspace.dependencies]
ethereum_ssz = "0.9"
tracing = "0.1.40"
ream-consensus = { git = "https://github.com/syjn99/ream", package = "ream-consensus", rev = "f5327406270b374b6caeaed05fc1549c5a21dd53" }
ream-merkle = { git = "https://github.com/syjn99/ream", package = "ream-merkle", rev = "f5327406270b374b6caeaed05fc1549c5a21dd53" }

[patch.crates-io]
ethereum_hashing = { git = "https://github.com/ReamLabs/ethereum_hashing" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
