[package]
name = "ream-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
ethereum_ssz = { workspace = true }
derive_more = { version = "2.0.1", features = ["full"] }
serde = { workspace = true}
snap = "1.1"
tracing = { workspace = true }

# Ream dependencies
ream-consensus = { workspace = true }
