[package]
version = "0.1.0"
name = "ream-script"
edition = "2021"
default-run = "ream"

[[bin]]
name = "ream"
path = "src/bin/main.rs"

[dependencies]
sp1-sdk = "4.0.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = { workspace = true }
hex = "0.4.3"
dotenv = "0.15.0"

# Ream dependencies
ream-consensus = { workspace = true }
ream-lib = { path = "../lib" }

[build-dependencies]
sp1-build = "4.0.0"
