[package]
version = "0.1.0"
name = "ream-script"
edition = "2024"
default-run = "ream"

[[bin]]
name = "ream"
path = "src/bin/main.rs"

[dependencies]
sp1-sdk = { version = "5.2.1", features = ["native-gnark"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = { workspace = true }
hex = "0.4.3"
dotenv = "0.15.0"

# Ethereum dependencies
ethereum_ssz = { workspace = true }

# Ream dependencies
ream-consensus = { workspace = true }
ream-lib = { path = "../lib" }

[build-dependencies]
sp1-build = "5.2.1"
