[package]
version = "0.1.0"
name = "ream-script"
edition = "2024"
default-run = "ream"

[[bin]]
name = "ream"
path = "src/bin/main.rs"

[dependencies]
clap = { workspace = true }
derive_more = { workspace = true }
dotenv = "0.15.0"
hex = "0.4.3"
serde = { workspace = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sp1-sdk = { version = "5.2.1", features = ["native-gnark"], default-features = false }
tracing = { workspace = true }

# Ethereum dependencies
ethereum_ssz = { workspace = true }

# Ream dependencies
ream-consensus = { workspace = true }
ream-lib = { path = "../lib" }

[build-dependencies]
sp1-build = "5.2.1"
